# inflection-rs

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  bench.sh  docker-compose.yml
.github/workflows/: rust.yml
benches/: inflection_benchmark.rs
src/: lib.rs
