[package]
name = "inflection-rs"
version = "0.1.2"
edition = "2021"
rust-version = "1.61.0"
description = "Inflection is a string transformation library. It singularizes and pluralizes English words, and transforms strings from CamelCase to underscored string."
readme = "README.md"
homepage = "https://github.com/floating-floaties/inflection-rs"
repository = "https://github.com/floating-floaties/inflection-rs"
license = "GPL-3.0-only"
keywords = ["inflection", "parameterize", "pluralize", "singularize", "titleize"]
exclude = ["Dockerfile", "target", "docker*", "*.lock", ".*"]

[lib]
bench = false

[dependencies]
hashbrown = "0.12"
regex = "1.6"
deunicode = "1.3"
string-utility = "0.2"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "inflection_benchmark"
harness = false
