[package]
name = "inflection-rs"
version = "0.2.1"
edition = "2021"
rust-version = "1.61.0"
description = "Inflection is a string transformation library. It singularizes and pluralizes English words, and transforms strings from CamelCase to underscored string."
readme = "README.md"
homepage = "https://github.com/floating-floaties/inflection-rs"
repository = "https://github.com/floating-floaties/inflection-rs"
license = "GPL-3.0-only"
keywords = ["inflection", "parameterize", "pluralize", "singularize", "titleize"]
exclude = ["Dockerfile", "target", "docker*", "*.lock", ".*"]

[lib]
bench = false

[dependencies]
lazy_static = "1.4.0"
regex = "1.10.3"
deunicode = "1.4.3"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "inflection_benchmark"
harness = false
